--- a/index.html
+++ b/index.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="ZF">
 <head>
-    <title>我的網頁</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <title>資安數據分析系統(測試版本)</title>
+    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://github.com/Allen59704/CHU_LOG.git">
 </head>
-<body class="a">
-    <h1>資安數據分析系統</h1>
-    <p>這是一個範例網頁。</p>
-    <p>測試</p>
+<body class="body">
+    <nav>
+        <img src="圖片/S__34979846.jpg" alt="檔案路徑錯誤">
+        <h1>資安數據分析系統</h1>
+    </nav>
+    
+    <div id="topimg">
+        <img src="圖片/S__34979846.jpg" alt="檔案路徑錯誤">
+    </div>
+
     <div>
         <form>
             <label for="username">帳號：</label>
             <input type="text" id="username" name="username">
-        </n>
+            <br>
             <label for="password">密碼：</label>
             <input type="password" id="password" name="password">
             <p>
@@ -22,17 +29,16 @@
         </form>
     </div>
         
-
      <div id="8in">
         <ul>
-            <li class="b"><a href="external_users.html" target="_blank">外部使用者</a></li>
-            <li class="b"><a href="external_servers.html" target="_blank">外部伺服器</a></li>
-            <li class="b"><a href="internet.html" target="_blank">網路</a></li>
-            <li class="b"><a href="router.html" target="_blank">路由器</a></li>
-            <li class="b"><a href="firewall.html" target="_blank">防火牆</a></li>
-            <li class="b"><a href="core_switch.html" target="_blank">核心交換器</a></li>
-            <li class="b"><a href="internal_users.html" target="_blank">內部使用者</a></li>
-            <li class="b"><a href="internal_servers.html" target="_blank">內部伺服器</a></li>
+            <li class="choose"><a href="external_users.html" target="_blank">外部使用者</a></li>
+            <li class="choose"><a href="external_servers.html" target="_blank">外部伺服器</a></li>
+            <li class="choose"><a href="internet.html" target="_blank">網路</a></li>
+            <li class="choose"><a href="router.html" target="_blank">路由器</a></li>
+            <li class="choose"><a href="firewall.html" target="_blank">防火牆</a></li>
+            <li class="choose"><a href="core_switch.html" target="_blank">核心交換器</a></li>
+            <li class="choose"><a href="internal_users.html" target="_blank">內部使用者</a></li>
+            <li class="choose"><a href="internal_servers.html" target="_blank">內部伺服器</a></li>
         </ul>
     </div>
     <script>
