--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ZF">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>資安數據分析系統(測試版本)</title>
@@ -8,7 +8,6 @@
 </head>
 <body class="body">
     <nav>
-        <img src="圖片/S__34979846.jpg" alt="檔案路徑錯誤">
         <h1>資安數據分析系統</h1>
     </nav>
     
@@ -18,7 +17,7 @@
         <img src="圖片/S__34979846.jpg" alt="檔案路徑錯誤">
     </div>
 
-    <div>
+    <div id="singin">
         <form>
             <label for="username">帳號：</label>
             <input type="text" id="username" name="username">
